Сделал правки в разметке

--- a/catalog.html
+++ b/catalog.html
@@ -2,8 +2,40 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Седона</title>
+    <title>Гостиницы</title>
   </head>
   <body>
-      <h1>Hello World</h1>
-  </body>   
+    <header class="page-header">
+      <nav class="navigation">
+        <img class="logo-header" src="" alt="Маленький логотип Седона" />
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="index.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigatiom-link" href="#"> О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">Поиск</span>
+            </a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigatiom-link" href="#">
+              <span class="visually-hidden">Лайк</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"> Хочу сюда </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
