--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social">
           <li class="social-item">
-            <a href="#"><img src="" alt="Twitter" /></a>
+            <a href="#"><img class="social-image" src="" alt="Twitter" /></a>
           </li>
           <li class="social-item">
-            <a href="#"><img src="" alt="Facebook" /></a>
+            <a href="#"><img class="social-image" src="" alt="Facebook" /></a>
           </li>
           <li class="social-item">
-            <a href="#"><img src="" alt="Youtube" /></a>
+            <a href="#"><img class="social-image" src="" alt="Youtube" /></a>
           </li>
         </ul>
         <p class="phone">
