--- a/catalog.html
+++ b/catalog.html
@@ -19,14 +19,12 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-
           <li class="navigation-item">
             <a class="navigatiom-link" href="#">
               <span class="visually-hidden">Лайк</span>
@@ -38,7 +36,6 @@
         </ul>
       </nav>
     </header>
-
     <main class="main-inner">
       <section class="filter-hostel"> <!--Фильтры-->
         <h1 class="hostels">Гостиницы Седоны</h1>
@@ -54,20 +51,19 @@
         </ul>
         <h2 class="visually-hidden">Фильтры</h2>
         <form
-        oninput="nomer.value = slider.value"
           class="catalog-filter"
           action="https://echo.htmlacademy.ru/"
           method="get"
         >
           <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Инфраструктура</legend>
+            <legend class="catalog-filter-title">Инфраструктура:</legend>
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
                   <input
                     class="control-input"
                     type="checkbox"
-                    name="pond"
+                    name="pool"
                     checked
                   />
                   Бассейн
@@ -78,7 +74,7 @@
                   <input
                     class="control-input"
                     type="checkbox"
-                    name="pond"
+                    name="parking"
                     checked
                   />
                   Парковка
@@ -86,15 +82,14 @@
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="pond" />
+                  <input class="control-input" type="checkbox" name="Wireless" />
                   Wi-Fi
                 </label>
               </li>
             </ul>
           </fieldset>
-
           <fieldset class="catalog-filter-group">
-            <legend class="catalog-filter-title">Тип жилья</legend>
+            <legend class="catalog-filter-title">Тип жилья:</legend>
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
@@ -121,35 +116,31 @@
               </li>
             </ul>
           </fieldset>
-          <span class="filter-range"> Стоимость &#8381</span>
+          <span class="filter-range"> Стоимость,&#8381:</span>
           <input class="number-button" type="number" value="0" >
-          <label class="slider" for=""></label>
-          <input class="number-button" type="number" name="nomer"  value="9000" >
-          <input class="range" id="slider" type="range" value="9000" min="1" max="10000">
-          <output for="slider"></output>
+          <input class="range" type="range" value="0" min="1" max="10000">
+          <input class="number-button" type="number" value="9000" >
+          <input class="range" type="range" value="9000" min="1" max="10000">
           <button class="button-filter" type="submit">Применить</button>
           <button class="button-filter" type="reset" value="Сбросить">Сбросить</button>
         </form>
       </section>
-
       <div class="search-hostels">
         <span class="sum-search"> Найдено гостиниц: 38</span>
       </div>
       <select class="select-control" aria-label="Сортировка">
         <option value="cheaply">Сначала дешёвые</option>
       </select>
-
       <a href="#" class="button-item">
         <span class="visually-hidden">Показать плитку</span>
       </a>
       <a class="button-item" href="#">
         <span class="visually-hidden">Показать карточки</span>
       </a>
-
       <a class="button-item" href="#">
         <span class="visually-hidden">Показать список</span>
       </a>
-<section class="hostels-main">
+<section class="hostels-main"> <!--Гостиницы описание-->
   <ul class="list-hotel">
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
@@ -157,13 +148,12 @@
   <h3 class="name-hostel"> Amara Resort & Spa </h3>
   </a>
   <span class="price">Гостиница </span>
-  <span class="price">От 4000 &#8381 </span>
+  <span class="price">От 4000 &#8381; </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
   <img class="stars" src="" alt="количество звезд">
-  <span class="rating">Рейтинг:8,5</span>
+  <span class="rating">Рейтинг: 8,5</span>
 </li>
-
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
   <img class="hostel-from" src="" alt="Фото гостиницы">
@@ -174,7 +164,7 @@
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
   <img class="stars" src="" alt="количество звезд">
-  <span class="rating">Рейтинг:8,9</span>
+  <span class="rating">Рейтинг: 8,9</span>
 </li>
 
 <li class="hostels-item">
@@ -182,12 +172,12 @@
   <img class="hostel-from" src="" alt="Фото гостиницы">
   <h3 class="name-hostel"> Villas at Poco Diablo </h3>
   </a>
-  <span class="price">Гостиница </span>
+  <span class="price">Гостиница</span>
   <span class="price">От 2000 &#8381 </span>
-  <a class="detail-link " href="#">Подробнее</a>
-  <button class="detail-button">В избранное</button>
+  <a class="detail-link " href="#">подробнее</a>
+  <button class="detail-button">В избранном</button>
   <img class="stars" src="" alt="количество звезд">
-  <span class="rating">Рейтинг:9,2</span>
+  <span class="rating">Рейтинг: 8,9</span>
 </li>
 
 <li class="hostels-item">
@@ -200,12 +190,12 @@
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
   <img class="stars" src="" alt="количество звезд">
-  <span class="rating">Рейтинг:9,2</span>
+  <span class="rating">Рейтинг: 9,2</span>
 </li>
   </ul>
 </section>
 <div class="upload">
-  <button class="button-upload" >Загрузить еще</button>
+  <button class="button-upload">Загрузить ещё</button>
 </div>
 <div class="page-number">
   <ul class="page-list">
@@ -216,7 +206,6 @@
     <li class="page-item"><a class="page-link" href="#">...</a></li>
     <li class="page-item"><a class="page-link" href="#">10</a></li>
   </ul>
-
   <label class="page-hostel-number" for="host">Гостиниц на странице:</label>
     <select name="number-host" id="host">
       <option value="4">4</option>
@@ -257,9 +246,7 @@ method="post"
             <a href="#"><img class="social-image" src="" alt="Youtube" /></a>
           </li>
         </ul>
-        <p class="phone">
           <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
-        </p>
         <p class="academy-logo">
           <a class="academy-link" href="https://htmlacademy.ru/">
             <img
