--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Гостиницы</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header class="page-header"> <!--Панель навигации-->
       <nav class="navigation">
-        <img class="logo-header" src="" alt="Маленький логотип Седона" />
+        <img class="logo-header" src="images/logo.svg" width="139px" height="70px" alt="Маленький логотип Седона" />
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
