--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Гостиницы</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <header class="page-header"> <!--Панель навигации-->
@@ -14,7 +14,7 @@
             <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigatiom-link" href="#"> О Седоне</a>
+            <a class="navigation-link" href="#"> О Седоне</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -27,12 +27,12 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigatiom-link" href="#">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">Лайк</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#"> Хочу сюда </a>
+            <a class="navigation-link button-link" href="#"> Хочу сюда </a>
           </li>
         </ul>
       </nav>
@@ -43,7 +43,7 @@
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="home-link" href="index.html"
-              ><img class="home-logo" src="" alt="На главную"
+              ><img class="home-logo" src="images/icon/home-icon.svg" width="12px" height="11px"  alt="На главную"
             /></a>
           </li>
           <li class="breadcrumbs-item">
@@ -122,7 +122,7 @@
           <input class="range" type="range" value="0" min="1" max="10000">
           <input class="number-button" type="number" value="9000" >
           <input class="range" type="range" value="9000" min="1" max="10000">
-          <button class="button-filter" type="submit">Применить</button>
+          <button class="button-filter color" type="submit">Применить</button>
           <button class="button-filter" type="reset" value="Сбросить">Сбросить</button>
         </form>
       </section>
@@ -145,52 +145,52 @@
   <ul class="list-hotel">
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-Amara.png" width="299px" height="206px" alt="Фото гостиницы">
   <h3 class="name-hostel"> Amara Resort & Spa </h3>
   </a>
   <span class="price">Гостиница </span>
   <span class="price">От 4000 &#8381; </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
-  <img class="stars" src="" alt="количество звезд">
+  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
   <span class="rating">Рейтинг: 8,5</span>
 </li>
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-desert.png" width="299px" height="206px" alt="Фото гостиницы">
   <h3 class="name-hostel"> Desert Quail Inn </h3>
   </a>
   <span class="price">Гостиница </span>
   <span class="price">От 3000 &#8381 </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
-  <img class="stars" src="" alt="количество звезд">
+  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
   <span class="rating">Рейтинг: 8,9</span>
 </li>
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-villas.png" width="299px" height="206px" alt="Фото гостиницы">
   <h3 class="name-hostel"> Villas at Poco Diablo </h3>
   </a>
   <span class="price">Гостиница</span>
   <span class="price">От 2000 &#8381 </span>
   <a class="detail-link " href="#">подробнее</a>
   <button class="detail-button">В избранном</button>
-  <img class="stars" src="" alt="количество звезд">
+  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
   <span class="rating">Рейтинг: 8,9</span>
 </li>
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.png" width="299px" height="206px" alt="Фото гостиницы">
   <h3 class="name-hostel"> GreenTree Inn </h3>
   </a>
   <span class="price">Гостиница </span>
   <span class="price">От 3000 &#8381 </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
-  <img class="stars" src="" alt="количество звезд">
+  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
   <span class="rating">Рейтинг: 9,2</span>
 </li>
   </ul>
@@ -214,8 +214,8 @@
 </div>
 <section class="mailing-hostels">
  <!--Подписаться на рассылку-->
- <h2 class="mailing">Подпишитесь на рассылку</h2>
- <p class="mailing-description">
+ <h2 class="mailing-catalog">Подпишитесь на рассылку</h2>
+ <p class="mailing-description-catalog">
    Только полезная информация и никакого спама, честное бойскаутское!
  </p>
 <form
@@ -238,13 +238,13 @@ method="post"
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social">
           <li class="social-item">
-            <a href="#"><img class="social-image" src="" alt="Twitter" /></a>
+            <a href="#"><img class="social-image" src="images/social-twitter.svg" width="18px" height="15px" alt="Twitter" /></a>
           </li>
           <li class="social-item">
-            <a href="#"><img class="social-image" src="" alt="Facebook" /></a>
+            <a href="#"><img class="social-image" src="images/social-facebook.svg" width="10px" height="18px" alt="Facebook" /></a>
           </li>
           <li class="social-item">
-            <a href="#"><img class="social-image" src="" alt="Youtube" /></a>
+            <a href="#"><img class="social-image" src="images/social-youtube.svg" width="20px" height="16px" alt="Youtube" /></a>
           </li>
         </ul>
           <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
@@ -252,7 +252,7 @@ method="post"
           <a class="academy-link" href="https://htmlacademy.ru/">
             <img
               class="academy-img"
-              src=""
+              src="images/html.png" width="115px" height="34px"
               alt="Картинка-ссылка html academy"
             />
           </a>
