--- a/catalog.html
+++ b/catalog.html
@@ -22,12 +22,12 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link search-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link like-link" href="#">
               <span class="visually-hidden">Лайк</span>
             </a>
           </li>
@@ -42,9 +42,10 @@
         <h1 class="hostels">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
-            <a class="home-link" href="index.html"
-              ><img class="home-logo" src="images/icon/home-icon.svg" width="12px" height="11px"  alt="На главную"
-            /></a>
+            <a class="home-logo" href="index.html">
+              <span class="visually-hidden">home</span>
+            </a>
+
           </li>
           <li class="breadcrumbs-item">
             <a class="home-link" href="catalog.html">Гостиницы</a>
@@ -145,52 +146,62 @@
   <ul class="list-hotel">
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-Amara.png" width="299px" height="206px" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-Amara.jpg" width="299px" height="206px" alt="Гостиница Amara Resort & Spa">
   <h3 class="name-hostel"> Amara Resort & Spa </h3>
   </a>
   <span class="price">Гостиница </span>
   <span class="price">От 4000 &#8381; </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
-  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
+
+  <span class="rating-link">
+    <span class="visually-hidden">star</span>
+  </span>
+
   <span class="rating">Рейтинг: 8,5</span>
 </li>
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-desert.png" width="299px" height="206px" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-desert.jpg" width="299px" height="206px" alt="Гостиница Desert Quail Inn">
   <h3 class="name-hostel"> Desert Quail Inn </h3>
   </a>
   <span class="price">Гостиница </span>
   <span class="price">От 3000 &#8381 </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
-  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
+  <span class="rating-link">
+    <span class="visually-hidden">star</span>
+  </span>
   <span class="rating">Рейтинг: 8,9</span>
 </li>
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-villas.png" width="299px" height="206px" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-villas.jpg" width="299px" height="206px" alt="Гостиница Villas at Poco Diablo">
   <h3 class="name-hostel"> Villas at Poco Diablo </h3>
   </a>
   <span class="price">Гостиница</span>
   <span class="price">От 2000 &#8381 </span>
   <a class="detail-link " href="#">подробнее</a>
   <button class="detail-button">В избранном</button>
-  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
+  <span class="rating-link">
+    <span class="visually-hidden">star</span>
+  </span>
   <span class="rating">Рейтинг: 8,9</span>
 </li>
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.png" width="299px" height="206px" alt="Фото гостиницы">
+  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.jpg" width="299px" height="206px" alt="Гостиница GreenTree Inn">
   <h3 class="name-hostel"> GreenTree Inn </h3>
   </a>
   <span class="price">Гостиница </span>
   <span class="price">От 3000 &#8381 </span>
   <a class="detail-link " href="#">Подробнее</a>
   <button class="detail-button">В избранное</button>
-  <img class="stars" src="images/star.svg" width="18px" height="17px" alt="количество звезд">
+  <span class="rating-link">
+    <span class="visually-hidden">star</span>
+  </span>
   <span class="rating">Рейтинг: 9,2</span>
 </li>
   </ul>
@@ -235,16 +246,20 @@ method="post"
     </main>
     <footer class="page-footer">
       <section class="footer-social">
-        <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social">
           <li class="social-item">
-            <a href="#"><img class="social-image" src="images/social-twitter.svg" width="18px" height="15px" alt="Twitter" /></a>
+            <a class="navigation-link twitter-link" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
           </li>
           <li class="social-item">
-            <a href="#"><img class="social-image" src="images/social-facebook.svg" width="10px" height="18px" alt="Facebook" /></a>
+            <a class="navigation-link facebook-link" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
           </li>
           <li class="social-item">
-            <a href="#"><img class="social-image" src="images/social-youtube.svg" width="20px" height="16px" alt="Youtube" /></a>
+            <a class="navigation-link youtube-link" href="#">
+            <span class="visually-hidden">Ютуб</span>
           </li>
         </ul>
           <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
