--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link search-link" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
 
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link like-link" href="#">
               <span class="visually-hidden">Лайк</span>
             </a>
           </li>
@@ -73,7 +73,7 @@
         <!--Болшая секция причины седона выяснить про классы на каждый блок, как получаеются разные цвета-->
         <h2 class="visually-hidden">Причины</h2>
         <ul class="reasons-list">
-          <li class="reasons-item card1">
+          <li class="reasons-item card-color">
             <h3 class="reasons-title">Настоящий городок</h3>
             <p class="reasons-description">— №1 —</p>
             <p class="reasons-description">
@@ -92,26 +92,18 @@
             <p class="reasons-description">
               Рекомендуем пожить в настоящем мотеле, всё как в кино!
             </p>
-            <img
-              class="reasons-logo"
-              src="images/icon/icon-1.svg"
-              width="74px"
-              height="72px"
-              alt="Домик"
-            />
+            <span class="reasons-home">
+              <span class="visually-hidden">hom</span>
+            </span>
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Еда</h3>
             <p class="reasons-description">
               Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
             </p>
-            <img
-              class="reasons-logo"
-              src="images/icon/icon-2.svg"
-              width="74px"
-              height="70px"
-              alt="бургер"
-            />
+            <span class="reasons-food">
+              <span class="visually-hidden">Food</span>
+            </span>
           </li>
 
           <li class="reasons-item">
@@ -119,16 +111,12 @@
             <p class="reasons-description">
               Не только китайского, но и настоящего местного производства!
             </p>
-            <img
-              class="reasons-logo"
-              src="images/icon/icon-3.svg"
-              width="64px"
-              height="75px"
-              alt="сувенир"
-            />
+            <span class="reasons-souv">
+              <span class="visually-hidden">Сувениры</span>
+            </span>
           </li>
 
-          <li class="reasons-item card2">
+          <li class="reasons-item card-color">
             <h3 class="reasons-title">там есть мост дьявола</h3>
             <p class="reasons-description">— №2 —</p>
             <p class="reasons-description">
@@ -205,42 +193,24 @@
 
     <footer class="page-footer">
       <section class="footer-social">
-        <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="footer-social">
           <li class="social-item">
-            <a href="#"
-              ><img
-                class="social-image"
-                src="images/social-twitter.svg"
-                width="18px"
-                height="15px"
-                alt="Twitter"
-            /></a>
+            <a class="navigation-link twitter-link" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
           </li>
           <li class="social-item">
-            <a href="#"
-              ><img
-                class="social-image"
-                src="images/social-facebook.svg"
-                width="10px"
-                height="18px"
-                alt="Facebook"
-            /></a>
+            <a class="navigation-link facebook-link" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
           </li>
           <li class="social-item">
-            <a href="#"
-              ><img
-                class="social-image"
-                src="images/social-youtube.svg"
-                width="20px"
-                height="16px"
-                alt="Youtube"
-            /></a>
+            <a class="navigation-link youtube-link" href="#">
+            <span class="visually-hidden">Ютуб</span>
           </li>
         </ul>
 
         <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
-
         <p class="academy-logo">
           <a class="academy-link" href="https://htmlacademy.ru/">
             <img
