--- a/catalog.html
+++ b/catalog.html
@@ -37,9 +37,11 @@
         </ul>
       </nav>
     </header>
-    <main class="main-inner">
+    <main class="main-inner main-container">
+      <div class="page-container">
       <section class="filter-hostel"> <!--Фильтры-->
         <h1 class="hostels">Гостиницы Седоны</h1>
+        <div class="test">
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="home-logo" href="index.html">
@@ -126,6 +128,7 @@
           <button class="button-filter color" type="submit">Применить</button>
           <button class="button-filter" type="reset" value="Сбросить">Сбросить</button>
         </form>
+      </div>
       </section>
       <div class="search-hostels">
         <span class="sum-search"> Найдено гостиниц: 38</span>
@@ -243,8 +246,10 @@ method="post"
 <button class="button-email" type="submit">Подписаться</button>
 </form>
 </section>
+</div>
     </main>
     <footer class="page-footer">
+      <div class="footer-container">
       <section class="footer-social">
         <ul class="footer-social">
           <li class="social-item">
@@ -261,13 +266,16 @@ method="post"
             <a class="navigation-link youtube-link" href="#">
             <span class="visually-hidden">Ютуб</span>
           </li>
-        </ul>
-          <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
+          </ul>
+        </section>
+        <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
         <p class="academy-logo">
           <a class="academy-link" href="https://htmlacademy.ru/">
             <img
               class="academy-img"
-              src="images/html.png" width="115px" height="34px"
+              src="images/html.png"
+              width="115px"
+              height="34px"
               alt="Картинка-ссылка html academy"
             />
           </a>
