--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="page-header">
     <nav class="navigation">
-      <img class="logo-header" src="images/logo.svg" width="139px" height="70px" alt="Маленький логотип Седона" />
+      <img class="logo-header" src="images/logo.svg" width="139px" height="70px" Alt="Маленький логотип Седона" />
       <ul class="navigation-list">
         <li class="navigation-item">
           <a class="navigation-link" href="index.html">Главная</a>
@@ -68,7 +68,7 @@
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
             <img class="reasons-image-hotel" src="images/photo-1.jpg" width="800px" height="384px"
-              alt="Фото гостиницы" />
+              Alt="Фото гостиницы" />
           </li>
           <li class="reasons-item">
             <h3 class="reasons-title">Жильё</h3>
@@ -105,7 +105,7 @@
             <p class="reasons-description">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
-            <img class="reasons-image-bridge" src="images/photo-2.jpg" width="800px" height="384px" alt="каньон" />
+            <img class="reasons-image-bridge" src="images/photo-2.jpg" width="800px" height="384px" Alt="каньон" />
           </li>
 
           <li class="reasons-item">
@@ -141,7 +141,7 @@
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
-        <a class="button-catalog" href="catalog.html">поиск гостиницы в седоне
+        <a class="button-catalog" href="catalog.html">Поиск гостиницы в седоне
         </a>
       </section>
 
@@ -152,7 +152,7 @@
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form class="email-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" id="email-sending" name="email-sending" placeholder="Ваш e-mail" />
+          <input type="email" name="email-sending" placeholder="Ваш e-mail" />
           <button class="button-email" type="submit">Подписаться</button>
         </form>
       </section>
@@ -175,15 +175,15 @@
           </li>
           <li class="social-item">
             <a class="navigation-link youtube-link" href="#">
-              <span class="visually-hidden">Ютуб</span>
+            <span class="visually-hidden">Ютуб</span>
           </li>
         </ul>
       </section>
-      <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
+      <a class="phone-number" href="tel">+7 (812) 812-12-12</a>
       <p class="academy-logo">
         <a class="academy-link" href="https://htmlacademy.ru/">
           <img class="academy-img" src="images/html.png" width="115px" height="34px"
-            alt="Картинка-ссылка html academy" />
+            Alt="Картинка-ссылка html academy" />
         </a>
       </p>
       </section>
