Revert "Сетка страниц и крупных блоков на флексах"

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header"> <!--Панель навигации-->
       <nav class="navigation">
-        <img class="logo-header" src="images/logo.svg" width="139px" height="70px" Alt="Маленький логотип Седона" />
+        <img class="logo-header" src="images/logo.svg" width="139px" height="70px" alt="Маленький логотип Седона" />
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
@@ -37,11 +37,9 @@
         </ul>
       </nav>
     </header>
-    <main class="main-inner main-container">
-      <div class="page-container">
+    <main class="main-inner">
       <section class="filter-hostel"> <!--Фильтры-->
         <h1 class="hostels">Гостиницы Седоны</h1>
-        <div class="hostel-container">
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="home-logo" href="index.html">
@@ -128,7 +126,6 @@
           <button class="button-filter color" type="submit">Применить</button>
           <button class="button-filter" type="reset" value="Сбросить">Сбросить</button>
         </form>
-      </div>
       </section>
       <div class="search-hostels">
         <span class="sum-search"> Найдено гостиниц: 38</span>
@@ -149,7 +146,7 @@
   <ul class="list-hotel">
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-Amara.jpg" width="299px" height="206px" Alt="Гостиница Amara Resort & Spa">
+  <img class="hostel-from" src="images/hotel-images/hotel-Amara.jpg" width="299px" height="206px" alt="Гостиница Amara Resort & Spa">
   <h3 class="name-hostel"> Amara Resort & Spa </h3>
   </a>
   <span class="price">Гостиница </span>
@@ -165,7 +162,7 @@
 </li>
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-desert.jpg" width="299px" height="206px" Alt="Гостиница Desert Quail Inn">
+  <img class="hostel-from" src="images/hotel-images/hotel-desert.jpg" width="299px" height="206px" alt="Гостиница Desert Quail Inn">
   <h3 class="name-hostel"> Desert Quail Inn </h3>
   </a>
   <span class="price">Гостиница </span>
@@ -180,7 +177,7 @@
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-villas.jpg" width="299px" height="206px" Alt="Гостиница Villas at Poco Diablo">
+  <img class="hostel-from" src="images/hotel-images/hotel-villas.jpg" width="299px" height="206px" alt="Гостиница Villas at Poco Diablo">
   <h3 class="name-hostel"> Villas at Poco Diablo </h3>
   </a>
   <span class="price">Гостиница</span>
@@ -195,7 +192,7 @@
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.jpg" width="299px" height="206px" Alt="Гостиница GreenTree Inn">
+  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.jpg" width="299px" height="206px" alt="Гостиница GreenTree Inn">
   <h3 class="name-hostel"> GreenTree Inn </h3>
   </a>
   <span class="price">Гостиница </span>
@@ -246,10 +243,8 @@ method="post"
 <button class="button-email" type="submit">Подписаться</button>
 </form>
 </section>
-</div>
     </main>
     <footer class="page-footer">
-      <div class="footer-container">
       <section class="footer-social">
         <ul class="footer-social">
           <li class="social-item">
@@ -266,17 +261,14 @@ method="post"
             <a class="navigation-link youtube-link" href="#">
             <span class="visually-hidden">Ютуб</span>
           </li>
-          </ul>
-        </section>
-        <a class="phone-number" href="tel">+7 (812) 812-12-12</a>
+        </ul>
+          <a class="phone-number" href="78128121212">+7 (812) 812-12-12</a>
         <p class="academy-logo">
           <a class="academy-link" href="https://htmlacademy.ru/">
             <img
               class="academy-img"
-              src="images/html.png"
-              width="115px"
-              height="34px"
-              Alt="Картинка-ссылка html academy"
+              src="images/html.png" width="115px" height="34px"
+              alt="Картинка-ссылка html academy"
             />
           </a>
         </p>
