--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header"> <!--Панель навигации-->
       <nav class="navigation">
-        <img class="logo-header" src="images/logo.svg" width="139px" height="70px" Alt="Маленький логотип Седона" />
+        <img class="logo-header" src="images/logo.svg" width="139px" height="70px" alt="Маленький логотип Седона" />
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
@@ -149,7 +149,7 @@
   <ul class="list-hotel">
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-Amara.jpg" width="299px" height="206px" Alt="Гостиница Amara Resort & Spa">
+  <img class="hostel-from" src="images/hotel-images/hotel-Amara.jpg" width="299px" height="206px" alt="Гостиница Amara Resort & Spa">
   <h3 class="name-hostel"> Amara Resort & Spa </h3>
   </a>
   <span class="price">Гостиница </span>
@@ -165,7 +165,7 @@
 </li>
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-desert.jpg" width="299px" height="206px" Alt="Гостиница Desert Quail Inn">
+  <img class="hostel-from" src="images/hotel-images/hotel-desert.jpg" width="299px" height="206px" alt="Гостиница Desert Quail Inn">
   <h3 class="name-hostel"> Desert Quail Inn </h3>
   </a>
   <span class="price">Гостиница </span>
@@ -180,7 +180,7 @@
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-villas.jpg" width="299px" height="206px" Alt="Гостиница Villas at Poco Diablo">
+  <img class="hostel-from" src="images/hotel-images/hotel-villas.jpg" width="299px" height="206px" alt="Гостиница Villas at Poco Diablo">
   <h3 class="name-hostel"> Villas at Poco Diablo </h3>
   </a>
   <span class="price">Гостиница</span>
@@ -195,7 +195,7 @@
 
 <li class="hostels-item">
   <a class="hostel-from-link" href="">
-  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.jpg" width="299px" height="206px" Alt="Гостиница GreenTree Inn">
+  <img class="hostel-from" src="images/hotel-images/hotel-GreenTree.jpg" width="299px" height="206px" alt="Гостиница GreenTree Inn">
   <h3 class="name-hostel"> GreenTree Inn </h3>
   </a>
   <span class="price">Гостиница </span>
@@ -268,7 +268,7 @@ method="post"
           </li>
           </ul>
         </section>
-        <a class="phone-number" href="tel">+7 (812) 812-12-12</a>
+        <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <p class="academy-logo">
           <a class="academy-link" href="https://htmlacademy.ru/">
             <img
@@ -276,7 +276,7 @@ method="post"
               src="images/html.png"
               width="115px"
               height="34px"
-              Alt="Картинка-ссылка html academy"
+              alt="Картинка-ссылка html academy"
             />
           </a>
         </p>
