--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
       <section class="footer-social">
         <ul class="footer-social">
           <li class="social-item">
-            <a class="navigation-link twitter-link" href="#">
+            <a class="link twitter-link" href="#">
               <span class="visually-hidden">Твиттер</span>
             </a>
           </li>
           <li class="social-item">
-            <a class="navigation-link facebook-link" href="#">
+            <a class="link facebook-link" href="#">
               <span class="visually-hidden">Фейсбук</span>
             </a>
           </li>
           <li class="social-item">
-            <a class="navigation-link youtube-link" href="#">
+            <a class="link youtube-link" href="#">
             <span class="visually-hidden">Ютуб</span>
           </li>
         </ul>
