--- a/catalog.html
+++ b/catalog.html
@@ -128,11 +128,12 @@
           <button class="button-filter color" type="submit">Применить</button>
           <button class="button-filter" type="reset" value="Сбросить">Сбросить</button>
         </form>
-      </div>
+    </div>
       </section>
       <div class="search-hostels">
         <span class="sum-search"> Найдено гостиниц: 38</span>
       </div>
+      <div class="sorting-container">
       <select class="select-control" aria-label="Сортировка">
         <option value="cheaply">Сначала дешёвые</option>
       </select>
@@ -145,6 +146,7 @@
       <a class="button-item" href="#">
         <span class="visually-hidden">Показать список</span>
       </a>
+    </div>
 <section class="hostels-main"> <!--Гостиницы описание-->
   <ul class="list-hotel">
 <li class="hostels-item">
